Fixed reference to old 1.1 Kafka documentation upstream (#893)

--- a/documentation/book/assembly-kafka-broker-configuration.adoc
+++ b/documentation/book/assembly-kafka-broker-configuration.adoc
@@ -11,7 +11,7 @@
 = Kafka broker configuration
 
 {ProductName} allows you to customize the configuration of Apache Kafka brokers.
-You can specify and configure most of the options listed in {ApachaKafkaBrokerConfig}.
+You can specify and configure most of the options listed in {ApacheKafkaBrokerConfig}.
 
 The only options which cannot be configured are those related to the following areas:
 
