Kafka Connect bootstrap servers doc files renaming (#902)
* Rename Kafka Connect bootstrap servers related doc files
Fixed typo in configuring replicas for Kafka Connect

* Review comments

--- a/documentation/book/proc-configuring-kafka-connect-replicas.adoc
+++ b/documentation/book/proc-configuring-kafka-connect-replicas.adoc
@@ -3,9 +3,9 @@
 // assembly-kafka-connect-replicas.adoc
 
 [id='proc-configuring-kafka-connect-replicas-{context}']
-= Configuring the number of broker nodes
+= Configuring the number of nodes
 
-Number of Kafka broker nodes can be configured using the `replicas` property in `KafkaConnect.spec` and `KafkaConnectS2I.spec`.
+Number of Kafka Connect nodes can be configured using the `replicas` property in `KafkaConnect.spec` and `KafkaConnectS2I.spec`.
 
 .Prerequisites
 
